--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ section {
     color:#FFF;
 }
 
+#title {
+    background-color: #5A1B9A;
+}
+
 #footer {
     background-color: #2A006C;
 }
@@ -33,6 +37,7 @@ section {
 h1 {
     font-weight: lighter;
     font-size: 80px;
+    margin: 10px 0;
 }
 
 
@@ -45,6 +50,11 @@ h1 {
     padding:50px;
     margin:0 auto;
     max-width: 1200px;
+}
+
+#header .wrapper {
+    padding-bottom:90px;
+    padding-top:90px;
 }
 
 .inputs {
@@ -71,6 +81,19 @@ input[type="text"] {
     z-index:2;
     width:220px;
 }
+
+.suggestion {
+    padding:5px;
+    position:absolute;
+    height:30px;
+    bottom:-75px;
+    font-size: 15px;
+    font-style:normal;
+    opacity:0;
+    transition: all 0.3s ease;
+    cursor:pointer;
+}
+
 input[type="text"]+.bg {
     display:inline-block;
     height:0;
@@ -90,4 +113,8 @@ input[type="text"]:focus {
 input[type="text"]:focus+.bg {
     border-top: 0 solid transparent;
     border-bottom: 45px solid #FFF;
+}
+
+input[type="text"]:focus+.bg>.suggestion.open {
+    opacity:1;
 }
