--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ section {
 section {
     background-color:#4A148C;
     color:#FFF;
+    overflow:hidden;
+}
+
+section.hidden {
+    height:0;
 }
 
 h1 {
@@ -65,6 +70,22 @@ h1 {
 
 input:focus {
     outline:0;
+}
+
+input[type="button"] {
+    padding:12px 30px;
+    font-size:inherit;
+    border:0;
+    color:#4A148C;
+    background-color:#FFF;
+    border-radius:6px;
+    margin: 0 5px 0 20px;
+    transition:all 0.2s ease;
+}
+
+input[type="button"]:hover {
+    -webkit-transform: translate(0, -5px);
+    transform: translate(0, -5px);
 }
 
 input[type="text"] {
@@ -117,4 +138,37 @@ input[type="text"]:focus+.bg {
 
 input[type="text"]:focus+.bg>.suggestion.open {
     opacity:1;
+}
+
+#results {
+    background-color:#0B0F4D;
+}
+
+#scale {
+    margin-left:21px;
+    border-left: 2px dotted #FFF;
+    line-height:38px;
+}
+
+#scale .item h3 {
+    display:inline-block;
+    margin-left:-21px;
+    width:36px;
+    height:36px;
+    line-height:36px;
+    border-radius:50%;
+    background-color:#FFF;
+    border: 2px solid #0B0F4D;
+    text-align:center;
+    color:#0B0F4D;
+    margin-right:20px;
+    margin-top:0;
+    margin-bottom:10px;
+}
+
+#scale .item:last-child h3 {
+    margin-bottom:0;
+}
+#scale .item:last-child {
+    margin-bottom:-2px;
 }
