--- a/style.css
+++ b/style.css
@@ -226,3 +226,40 @@ input[type="text"]:focus+.bg>.suggestion.open {
         margin-right:0;
     }
 }
+
+
+@-webkit-keyframes flash {
+    0%, 50%, 100% {
+        color: #FFF;
+    }
+
+    25%, 75% {
+        color:#FFC4FE;
+    }
+}
+
+@keyframes flash {
+    0%, 50%, 100% {
+        color: #FFF;
+    }
+
+    25%, 75% {
+        color:#EBA0E6;
+    }
+}
+
+.flash {
+    -webkit-animation-name: flash;
+    animation-name: flash;
+}
+.animated {
+    -webkit-animation-duration: 10s;
+    animation-duration: 10s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+}
+
+.animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
